<resources>
    <string name="app_name">KotlinPractice</string>
    <string name="enterQuantity">Введите количество ваших подписчиков: </string>
    <string name="editTextValue">Кол-во подписчиков</string>
    <string name="textButton">Показать результат</string>
    <string name="editTextPassword">Введите ваш пароль</string>
    <string name="youtube" translatable="false">Youtube</string>
    <string name="people" translatable="false">People</string>
    <string name="signIn" translatable="false">Войти</string>
    <string name="signUp" translatable="false">Зарегистрироваться</string>
    <string name="avatar" translatable="false">Аватар</string>
    <string name="login" translatable="false">Логин</string>
    <string name="hintLogin" translatable="false">Введите ваш email</string>
    <string name="password" translatable="false">Пароль</string>
    <string name="hintPassword" translatable="false">Введите ваш пароль</string>
    <string name="firstName" translatable="false">Имя</string>
    <string name="lastName" translatable="false">Фамилия</string>
    <string name="phone" translatable="false">Телефон</string>
    <string name="save" translatable="false">Сохранить</string>
    <string name="practice" translatable="false">Практика</string>
    <string name="title" translatable="false">Вычислить "C"</string>
    <string name="resultInfo" translatable="false">Результат: </string>
    <string name="inputA" translatable="false">Введите значение "a"</string>
    <string name="inputB" translatable="false">Введите значение "b"</string>
    <string name="result" translatable="false">Результат</string>
    <string name="error" translatable="false">Поле должно быть заполнено</string>
</resources>