<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="100dp"
        android:text="@string/practice"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/buttonYoutube"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="56dp"
        android:text="@string/youtube"
        android:onClick="onClickGoYoutube"
        app:layout_constraintEnd_toEndOf="@+id/textView4"
        app:layout_constraintStart_toStartOf="@+id/textView4"
        app:layout_constraintTop_toBottomOf="@+id/textView4" />

    <Button
        android:id="@+id/buttonPeople"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="60dp"
        android:text="@string/people"
        android:onClick="onClickGoPeople"
        app:layout_constraintEnd_toEndOf="@+id/buttonYoutube"
        app:layout_constraintStart_toStartOf="@+id/buttonYoutube"
        app:layout_constraintTop_toBottomOf="@+id/buttonYoutube" />

    <Button
        android:id="@+id/buttonRegistration"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="60dp"
        android:text="@string/signUp"
        android:onClick="onClickRegistration"
        app:layout_constraintEnd_toEndOf="@+id/buttonPeople"
        app:layout_constraintStart_toStartOf="@+id/buttonPeople"
        app:layout_constraintTop_toBottomOf="@+id/buttonPeople" />

</androidx.constraintlayout.widget.ConstraintLayout>